remove fixed hieght and hide y overflow

--- a/style.css
+++ b/style.css
@@ -65,11 +65,9 @@ html, body{
 
 #ocean-scroll{
   position: relative;
-  height: 7214px;
   width: 100vw;
   background: linear-gradient(to bottom, #00c3ff, #000022);
   overflow-x: hidden;
-  overflow-y: hidden;
   margin-left: 0px;
   margin-right: 0px;
   padding-left: 0px;
